# REAL

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  requirements-qwen.txt  requirements.txt  script.js  styles.css
agents/: __init__.py  common.py  qwen_agent.py  vlm_api_agent.py
benchmark/: README.md  manifest.yaml  mesa_required.txt
configs/: demo_task.yaml
docs/: agent-mcp-closed-loop.md  minimal-data-release.md
mcp_server/: actions.py  config.py  interaction.py  mcp_env_demo.py  mcp_server_demo.py  perception_utils.py  tools.py
proc_datagen/: task_generator.py  verify_proc.py
real_bench/: __init__.py  __main__.py  loader.py
tests/: __init__.py  mcp_validation_server.py  test_agents.py  (+8 more)
training/mcp_gspo/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
training/mcp_gspo/config/: mcp_topology.sh.example  rl_training.env.example  single_gpu.env.example
training/mcp_gspo/docs/: ms_swift_ngrpo.md  real_mcp_contract.md
training/mcp_gspo/prompts/: real_grpo_prompt.txt
training/mcp_gspo/rl_runtime/: __init__.py  action_parser.py  environment.py  mcp_diff_metric.py  mcp_diff_reward.py  ngrpo.py  prompt.py  real_contract.py  scheduler.py  swift_plugin.py
training/mcp_gspo/scripts/: grpo_gym_dataset.json  kill_grpo_stack.sh  kill_tunnels.sh  launch_grpo.sh  mcp_rl_env.py  patch_ms_swift_ngrpo.py  preflight.py  setup_ssh_tunnels.sh  start_grpo_trainer.sh  start_rollout_server.sh  sync_prompt.py
training/mcp_gspo/scripts/lib/: runtime.sh
(+257 files in other folders)
