[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-rl-training"
version = "0.1.0"
description = "Standalone ms-swift GRPO runtime for REAL MCP environments"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["rl_runtime"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"rl_runtime/environment.py" = ["E402", "E722", "F401", "F541", "F841", "I001"]
"rl_runtime/scheduler.py" = ["E722", "F401", "F541", "F841", "I001"]
"rl_runtime/mcp_diff_reward.py" = ["F401", "F541", "I001"]
"rl_runtime/mcp_diff_metric.py" = ["I001"]
